@@ -1,3 +1,8 @@
+2003-07-02  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>
+
+	* logo-competition/logos/Wolf_Bergenheim/*: 
+	added logos
+
 2003-07-01  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>
 
 	* logo-competition/logos_new.php: 
